--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="form-group">
                 <label for="DESCRIPTION">Nội dung</label>
                 <div class="input-container">
-                    <input id="DESCRIPTION_PREFIX" type="text" placeholder="Tiền tố...">
-                    <input id="DESCRIPTION_SUFFIX" type="text" placeholder="Hậu tố..." disabled>
+                    <input id="DESCRIPTION_PREFIX" type="text" >
+                    <input id="DESCRIPTION_SUFFIX" type="text" disabled>
                 </div>
             </div>
 
