--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div class="form-group">
                 <label for="bank_select">Thương hiệu</label>
-                <input list="bank_template" id="bank_select">
+                <input list="bank_template" id="bank_select" autocomplete="off">
                 <datalist id="bank_template">
                     <option value="Tùy chỉnh">
                 </datalist>
